[package]
name = "kvs"
version = "0.1.0"
authors = ["Hanif Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.2"
log = "0.4.13"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
dotenv = "0.15.0"

[dev-dependencies]
assert_cmd = "1.0.2"
criterion = "0.3.3"
predicates = "1.0.6"
rand = "0.8.2"
tempfile = "3.2.0"
walkdir = "2.3.1"
